Working on Struts security manager setup for PWR + Struts2 example.
Still working on a bug for request invalidation